# wecare

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps_script/certificate_generator/: .clasp.json  main.ts
apps_script/sheets-certificate_generator/: .clasp.json  main.ts  package.json
apps_script/slides-certificate_generator/: .clasp.json  .gitignore  pnpm-lock.yaml
cli/: command_line_interface.py
inventory/: item.py  shoprite_api.py
inventory/test/: test_shoprite_api.py
pantry_soft/: api.py  credentials.py  driver.py  pantrysoft.py  test_pantrysoft.py
pantry_soft/test/: test_api.py
python_packages/foodpantry/: pyproject.toml
python_packages/foodpantry/foodpantry/: __init__.py  pantry.py  pantrysoft_api.py  shoprite_api.py
python_packages/foodpantry/tests/: test_api.py  test_shoprite_api.py
python_packages/inventory/: pantry.py
python_packages/pantrysoft/: pyproject.toml  test_pantrysoft.py
python_packages/pantrysoft/pantrysoft/: __init__.py  api.py  credentials.py  driver.py  pantrysoft.py
python_packages/pantrysoft/test/: test_api.py
python_packages/pantrysoft/tests/: test_api.py  test_pantrysoft.py
python_packages/pantrysoft_authenticator/: pyproject.toml
python_packages/pantrysoft_authenticator/pantrysoft_authenticator/: __init__.py  autheticate.py  base_driver.py  playwright_driver.py  selenium_driver.py
python_packages/pantrysoft_authenticator_api/: main.py  pyproject.toml
python_packages/scripts/: update_pantry_soft_items.py
python_scripts/canstruction-2025/: canstruction.py  products-can_filtered.csv  products.csv
python_scripts/pantrysoft_export/: .env.template  .gitignore  README.md  dev.py  get_clients.py  get_edit_visit_html_page.py  main.py  pyproject.toml  utilities.py
python_scripts/pantrysoft_export/pantrysoft_getters/: __init__.py  get_client_html_file.py  get_clients.py  get_items.py
python_scripts/pantrysoft_export/wrappers/: __init__.py  client.py  client_dashboard.py  client_dashboard_repository.py  client_dashboard_repository_sql.py  client_repository_sql.py  visit_edit_page.py  visit_edit_page_repository.py  visit_edit_page_repository_sql.py
scripts/: deactivate_all_items.py  helpers.py
ui/: ui.py
web_app/: web_app_helper.py
web_app/ui/: admin.py  helpers.py  models.py  urls.py  views.py
web_app/ui/migrations/: 0001_initial.py
web_app/ui/templates/ui/: add_item.html  add_result.html  layout.html
web_app/web_app/: settings.py  urls.py
