[tool.poetry]
name = "csi-food-pantry-python"
version = "0.1.0"
description = ""
authors = ["bibhubhatta <82817444+bibhubhatta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.0.2"
mypy = "^1.8.0"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
