[project]
name = "pantrysoft-authenticator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pantrysoft-authenticator",
]

[tool.uv.sources]
pantrysoft-authenticator = { path = "../pantrysoft_authenticator" }
