[project]
name = "pantrysoft-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "joblib>=1.4.2",
    "pantrysoft-authenticator",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]

[tool.uv.sources]
pantrysoft-authenticator = { path = "../../python_packages/pantrysoft_authenticator", editable = true }
